plugins {
	id 'java'
	id("org.springframework.boot") version "2.7.16"
	id("io.spring.dependency-management") version "1.1.4"
}

group = 'JavaProject'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	//openai
	implementation 'io.github.flashvayne:chatgpt-spring-boot-starter:1.0.4'

	//queryDSL
	implementation 'com.querydsl:querydsl-jpa'
	annotationProcessor(
			"javax.persistence:javax.persistence-api",
			"javax.annotation:javax.annotation-api",
			"com.querydsl:querydsl-apt:5.0.0:jpa")

	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

	//jwt
	implementation("io.jsonwebtoken:jjwt:0.9.1")

	//swagger
	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'

	//cache
	implementation 'org.springframework.boot:spring-boot-starter-cache'

	//jpa
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	//security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	//validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	//lombok
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'

	//test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
